auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "828efab9",
+   "id": "11301d23",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f090f91",
+   "id": "58c552dc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe91b49c",
+   "id": "df766e79",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a963f17",
+   "id": "7baf5098",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810c6750",
+   "id": "20e2b3d5",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5168036c",
+   "id": "4b68d19c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674451bf",
+   "id": "25aaa7b3",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4cc953b",
+   "id": "58ae367f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9623f973",
+   "id": "caa8c970",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa709eb4",
+   "id": "4e1e8d66",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f9e144",
+   "id": "bbe338de",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ffc6f9e",
+   "id": "eaaf70de",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1616e3a1",
+   "id": "148e5630",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f988ff8",
+   "id": "475b8d87",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "869954d2",
+   "id": "87a32aee",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7e69a2",
+   "id": "6181c37d",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc59052",
+   "id": "461b9d71",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a18948d",
+   "id": "834416c7",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f5d8e0e",
+   "id": "c5196da7",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9e8f5a",
+   "id": "c365b713",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4869dc0",
+   "id": "af9a30d8",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5951beb7",
+   "id": "73dbb4f3",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f77b575e",
+   "id": "9edb812c",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "500733d7",
+   "id": "3025a9d2",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77760580",
+   "id": "bbd1208f",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77619225",
+   "id": "e1d346cf",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35da0f38",
+   "id": "c0125475",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59819cc6",
+   "id": "31453291",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542116ae",
+   "id": "911161b7",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56ef38f",
+   "id": "f92e8059",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a6f1592",
+   "id": "d7c0ab4c",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f0484c",
+   "id": "a9d82e37",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a89c2cbe",
+   "id": "8efb92df",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "027fba6a",
+   "id": "526d7c74",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ac8509",
+   "id": "429cbc6e",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a373242",
+   "id": "be0f8821",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cfc6c5c",
+   "id": "0739047f",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43043355",
+   "id": "1df9875c",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c91b82",
+   "id": "9dfb0c97",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3d6f94",
+   "id": "b6d91fff",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6937b69f",
+   "id": "62320ea4",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71be8faf",
+   "id": "9716045c",
    "metadata": {
     "hide-output": false
    },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2defafd0",
+   "id": "8f050418",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "413492cc",
+   "id": "2795b6ed",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9726ffdc",
+   "id": "4477133b",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e3329e",
+   "id": "46469219",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b80f578d",
+   "id": "b6af00fe",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9ccf0b",
+   "id": "cbbc95bf",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b445ea6e",
+   "id": "14f620b3",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c53c2f",
+   "id": "88e21b01",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "373ea1bc",
+   "id": "eaab5d22",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47cac65a",
+   "id": "c8da3bd1",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9442d7",
+   "id": "d63268e2",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ae3af8",
+   "id": "e901ef97",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e361ab84",
+   "id": "201ad42f",
    "metadata": {
     "hide-output": false
    },
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e172121",
+   "id": "f0612e3a",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730299.916217,
+  "date": 1741992966.8078787,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
