--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "61851495",
+   "id": "1c8d93d5",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08698c3e",
+   "id": "54ac664b",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1c12aa",
+   "id": "fa415570",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38437d40",
+   "id": "17fa0898",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9fb8561",
+   "id": "58651e11",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a827507",
+   "id": "146fb442",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,18 +78,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a536056",
+   "id": "d9668950",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
     "\n",
     "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)\n",
-    "- [Simple Neural Network Regression with Keras and JAX](https://jax.quantecon.org/keras.html)"
+    "- [Simple Neural Network Regression with Keras and JAX](https://jax.quantecon.org/keras.html)\n",
+    "- [Neural Network Regression with JAX and Optax](https://jax.quantecon.org/jax_nn.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b2a9d979",
+   "id": "45abc368",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -101,7 +102,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730300.0332587,
+  "date": 1741992966.92467,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
