--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2685b6e6",
+   "id": "de62d5b6",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c0d72b",
+   "id": "3ab9eb27",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b3800a",
+   "id": "cd1cfdf7",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974e1026",
+   "id": "598bf265",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39efe383",
+   "id": "17421135",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05e78e68",
+   "id": "01217854",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4cf4585",
+   "id": "2b9752a0",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4f3ab8",
+   "id": "e8ceb137",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b92ed26",
+   "id": "c3bb96d7",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699604eb",
+   "id": "499d5753",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a25787",
+   "id": "600990f2",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9958a7f",
+   "id": "812efb17",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b9338f",
+   "id": "2761f628",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82bd81e3",
+   "id": "de454a50",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85d7435",
+   "id": "0aeced8d",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f7a3c9",
+   "id": "20780ca7",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe8b9aa9",
+   "id": "b56eb378",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a681ace8",
+   "id": "36c927c0",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81bf92b1",
+   "id": "cbc20ab0",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db6fda3b",
+   "id": "e92cbeee",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65017917",
+   "id": "c1137784",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20622e2b",
+   "id": "4fa0b40b",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbf8f461",
+   "id": "2786058a",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "618f45dd",
+   "id": "a4e9b8a5",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99b97c3",
+   "id": "4a7b743a",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d5389f0",
+   "id": "4a5d6174",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7991786c",
+   "id": "53a0b18d",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e63733b5",
+   "id": "3040931e",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa096e0",
+   "id": "41dbafbb",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e283b3",
+   "id": "50e6236d",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be82b410",
+   "id": "1c70bd5b",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec64565",
+   "id": "6f1fd5a0",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7575036c",
+   "id": "c9c06ee1",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0974ee3e",
+   "id": "5b599e73",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b43127",
+   "id": "5ec90229",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4959657b",
+   "id": "a1d77a77",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a199dc",
+   "id": "f2af4b5c",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c70abe5",
+   "id": "049c3b13",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feadabc2",
+   "id": "6052fdb9",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac7c1c0",
+   "id": "cad61593",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2474f4",
+   "id": "67c55682",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef6f352",
+   "id": "6c4b770e",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02cca0a5",
+   "id": "d829b9e2",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afded15a",
+   "id": "bc1254a3",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate the compile time."
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2239fb12",
+   "id": "441a3f20",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "557bae6a",
+   "id": "311272d4",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ff1db8",
+   "id": "de70944b",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de745be1",
+   "id": "73720bbc",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ae9ae2a",
+   "id": "d8581496",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730300.0891664,
+  "date": 1741992966.980065,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
