--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b78f5f6e",
+   "id": "69c4fd53",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e7cf52",
+   "id": "50aa4b84",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -25,25 +25,27 @@
     "using a neural network.\n",
     "\n",
     "We will use the popular deep learning library [Keras](https://keras.io/), which\n",
-    "provides a simple and elegant interface to deep learning.\n",
+    "provides a simple interface to deep learning.\n",
     "\n",
     "The emphasis in Keras is on providing an intuitive API, while the heavy lifting is\n",
-    "done by another library.\n",
+    "done by one of several possible backends.\n",
     "\n",
-    "Currently the backend library can be Tensorflow, PyTorch, or JAX.\n",
+    "Currently the backend library options are Tensorflow, PyTorch, and JAX.\n",
     "\n",
     "In this lecture we will use JAX.\n",
     "\n",
     "The objective of this lecture is to provide a very simple introduction to deep\n",
     "learning in a regression setting.\n",
     "\n",
-    "We begin with some standard imports."
+    "Later, in [a separate lecture](https://jax.quantecon.org/jax_nn.html), we will investigate how to do the same learning task using pure JAX, rather than relying on Keras.\n",
+    "\n",
+    "We begin this lecture with some standard imports."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48571db8",
+   "id": "e03f7f01",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e9df6de",
+   "id": "0986127f",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -64,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "225038ec",
+   "id": "3c55a332",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b26336a",
+   "id": "fdf71518",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -84,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab760e7b",
+   "id": "add2d44f",
    "metadata": {
     "hide-output": false
    },
@@ -96,16 +98,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4943f062",
+   "id": "91d47597",
    "metadata": {},
    "source": [
-    "Next we import some tools from Keras."
+    "Now we should be able to import some tools from Keras.\n",
+    "\n",
+    "(Without setting the backend to JAX, these imports might fail – unless you have PyTorch or Tensorflow set up.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26bbde31",
+   "id": "7980ef55",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f25d0f3a",
+   "id": "1081f488",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -146,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "028e3bf3",
+   "id": "d6c8d15d",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd69d95",
+   "id": "56662411",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -177,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5a6b31",
+   "id": "5153a3ec",
    "metadata": {
     "hide-output": false
    },
@@ -188,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b43df8a",
+   "id": "73724c2f",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -197,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f018e5",
+   "id": "dc7b65e7",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93ccc7f9",
+   "id": "6d3c2a69",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -221,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5311fd14",
+   "id": "879d2b00",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1786c5d",
+   "id": "22a6b6c1",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0242631e",
+   "id": "17468700",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -259,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fca25f",
+   "id": "6631ebc1",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec84e23",
+   "id": "d23d9d28",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec1a2bb",
+   "id": "fe9d149f",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -306,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "165e5dc1",
+   "id": "4bc01e3e",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c4faaf",
+   "id": "f79e22d3",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -343,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "156a8021",
+   "id": "b90f13dd",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "281ee2d3",
+   "id": "9288fe71",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -377,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cdd46ab",
+   "id": "2ad24b2d",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -388,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54112d57",
+   "id": "8709a5b5",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e8b9d2",
+   "id": "5d8098c6",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -408,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ed372fc",
+   "id": "909e051c",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7be44d4",
+   "id": "8a2f9999",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -430,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e114a142",
+   "id": "9e192283",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "377d975d",
+   "id": "ef7beff3",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -452,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80093b2a",
+   "id": "7b50ce91",
    "metadata": {
     "hide-output": false
    },
@@ -464,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d8a5ee",
+   "id": "c52b49a4",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -473,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed45ca9",
+   "id": "3c50ce45",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24288478",
+   "id": "f14357d7",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -493,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a8aaf8",
+   "id": "b985f5e1",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfa31b3",
+   "id": "16cfd849",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -517,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5545f791",
+   "id": "6de193ee",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d78f2fa",
+   "id": "2e1c70ae",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -543,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c38336c",
+   "id": "877e39c7",
    "metadata": {
     "hide-output": false
    },
@@ -555,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "746fb86a",
+   "id": "bbddae7a",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "938dbd9b",
+   "id": "ea8f63d4",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985cdcc5",
+   "id": "5c5f885f",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -591,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0f25c7",
+   "id": "eda60cf1",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acef20ca",
+   "id": "488e5ec6",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -615,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8a4d1e",
+   "id": "b306a245",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634ebb00",
+   "id": "dd9b7a9b",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba07866",
+   "id": "b20fe3d6",
    "metadata": {
     "hide-output": false
    },
@@ -656,15 +660,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc80af8",
+   "id": "1dd536a4",
    "metadata": {},
    "source": [
-    "Not surprisingly, the multilayer neural network does a much better job of fitting the data."
+    "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
+    "\n",
+    "In a [a follow-up lecture](https://jax.quantecon.org/jax_nn.html), we will try to achieve the same fit using pure JAX, rather than relying on the Keras front-end."
    ]
   }
  ],
  "metadata": {
-  "date": 1741730300.1976097,
+  "date": 1741992967.2412877,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
