--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "579a52d9",
+   "id": "22aa8038",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56587ee7",
+   "id": "50272ce7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1865843c",
+   "id": "aaf44c30",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4835d08",
+   "id": "9454ccc5",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b861ba13",
+   "id": "a17ad8c2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f209335",
+   "id": "40d55f58",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac684d54",
+   "id": "df7dbdcc",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f49520f4",
+   "id": "33ff3d01",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ef9087",
+   "id": "25fdf707",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3646cca",
+   "id": "0cddefc6",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "787921cd",
+   "id": "c9b2b53d",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6303acd",
+   "id": "5419f193",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039b2dc8",
+   "id": "7291c2fc",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46f326f3",
+   "id": "d82647da",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c071c6c",
+   "id": "43229c9d",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3fe85d",
+   "id": "77695c32",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55d4dc8",
+   "id": "e4f3bb6f",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73fd9521",
+   "id": "41cbdab1",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921caba4",
+   "id": "25ed5d20",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a63e36",
+   "id": "7d7e9db1",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57fdeee7",
+   "id": "ae828675",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f79da794",
+   "id": "66941a38",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ec153e",
+   "id": "f869519a",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e0ea60",
+   "id": "f64a3b61",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58523d88",
+   "id": "1867f226",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb4161c",
+   "id": "2726400d",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61492607",
+   "id": "84f16943",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac5e781b",
+   "id": "cb46f93c",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a6e707",
+   "id": "5e5eb61a",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5645beb9",
+   "id": "e3f83e2d",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e028d72a",
+   "id": "4ac55f6d",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3782760a",
+   "id": "38118f88",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d6c6be",
+   "id": "2311d33c",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f3ee6d",
+   "id": "1538f2df",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c14f5d3",
+   "id": "2e250138",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c2222e",
+   "id": "a8705f5c",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fc066a8",
+   "id": "f9cd5a4e",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95d10114",
+   "id": "02fc5e83",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc89332",
+   "id": "01194883",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b1fe89",
+   "id": "2373ea84",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8642e6c7",
+   "id": "c3f88cfe",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee45efc",
+   "id": "51cc0a34",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f6c26e",
+   "id": "071f8920",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975b63c0",
+   "id": "0e5a0064",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36903354",
+   "id": "3a05987c",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -709,7 +709,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730300.455595,
+  "date": 1741992967.3765104,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
