--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "221d4dd8",
+   "id": "a15d7d87",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afdc5eda",
+   "id": "e4dccad5",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "284018e4",
+   "id": "a3ba37fc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f439d8f",
+   "id": "daff2b8e",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d65585",
+   "id": "a1e90e87",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a2432f",
+   "id": "315152be",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad955798",
+   "id": "1aff89fe",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1710d25b",
+   "id": "7377871b",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c7ead9",
+   "id": "14f4597c",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee3dc9c",
+   "id": "3dac9b3f",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ec585b",
+   "id": "1312f182",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b338cae",
+   "id": "36af0b95",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4283579",
+   "id": "cc428677",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc75f677",
+   "id": "21d4a304",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae23e3f5",
+   "id": "43f142ed",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d91e30d",
+   "id": "10c8740f",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b898cd5",
+   "id": "ac0ca4c1",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4c93066",
+   "id": "76d86ee5",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef885b15",
+   "id": "d8b0eb20",
    "metadata": {
     "hide-output": false
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1769b015",
+   "id": "620aec36",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4a71108",
+   "id": "97d87b83",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd2b92d",
+   "id": "d132dc27",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff87d425",
+   "id": "51419d59",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed7dbd4",
+   "id": "8ed815f1",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd6f2d9",
+   "id": "678b4b10",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67a149f",
+   "id": "1cb01568",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c6faa51",
+   "id": "ea31b41b",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fdfcfeb",
+   "id": "4002c531",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890bc684",
+   "id": "76df0eaa",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72a14ee6",
+   "id": "8cc1b6fe",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87bc400a",
+   "id": "caa8e52b",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c9cd2e",
+   "id": "70df498a",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a70318",
+   "id": "055ab553",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14793bc5",
+   "id": "32663080",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67fd3e87",
+   "id": "d839e171",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05333bd3",
+   "id": "c202d84f",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7fdacc5",
+   "id": "08cd99f5",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51811e5f",
+   "id": "840cfbaa",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730300.6408587,
+  "date": 1741992967.560018,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
