--- a/status.ipynb
+++ b/status.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ef3c5e94",
+   "id": "448e8bf6",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
     "\n",
     "This table contains the latest execution statistics.\n",
     "\n",
-    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
+    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/jax_nn.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
     "|aiyagari_jax|2025-02-10 03:12|cache|66.47|✅|\n",
     "|arellano|2025-02-10 03:13|cache|20.08|✅|\n",
@@ -20,8 +20,9 @@
     "|inventory_dynamics|2025-02-10 03:15|cache|8.19|✅|\n",
     "|inventory_ssd|2025-02-10 03:48|cache|1933.22|✅|\n",
     "|jax_intro|2025-02-10 03:48|cache|31.26|✅|\n",
+    "|jax_nn|2025-03-14 22:54|cache|87.97|✅|\n",
     "|job_search|2025-02-10 03:48|cache|8.45|✅|\n",
-    "|keras|2025-03-11 21:57|cache|26.42|✅|\n",
+    "|keras|2025-03-14 22:55|cache|22.72|✅|\n",
     "|kesten_processes|2025-02-10 03:49|cache|13.47|✅|\n",
     "|lucas_model|2025-02-10 03:50|cache|15.8|✅|\n",
     "|markov_asset|2025-02-10 03:50|cache|10.33|✅|\n",
@@ -47,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be812823",
+   "id": "2855e87b",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e15c39",
+   "id": "6712eaf1",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbd90c6",
+   "id": "afebcd23",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +81,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730300.656123,
+  "date": 1741992967.6975555,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
