--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5c26085",
+   "id": "53764799",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390ed50b",
+   "id": "6aa7f015",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e7a077e",
+   "id": "d567ec76",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4660d1",
+   "id": "cc9e2961",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23f9865",
+   "id": "1da858de",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ead234",
+   "id": "67b12f0d",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa247cfa",
+   "id": "2b487f19",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b54365a",
+   "id": "401684cc",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0708c8d5",
+   "id": "0f467711",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b794c80",
+   "id": "e617593e",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad93e67",
+   "id": "44761f3e",
    "metadata": {},
    "source": [
     "Here we go"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a50d3a",
+   "id": "67f5a7e8",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f4a520",
+   "id": "cc891f28",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7636f03b",
+   "id": "c726ee4a",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48f52ca",
+   "id": "6a7cdf16",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe19f7b",
+   "id": "ad846b1d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bcd39e",
+   "id": "6b192e02",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c7e4f2",
+   "id": "b10efefc",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187a7e82",
+   "id": "da5d812c",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d43d17",
+   "id": "a1a0b99a",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "772b2f28",
+   "id": "85c82405",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d727710f",
+   "id": "d7deb6fc",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad2a92a",
+   "id": "2f3e90fe",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82275e65",
+   "id": "4894e1f9",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa7b5449",
+   "id": "0743703d",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698d6c36",
+   "id": "23bfc825",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0d7589",
+   "id": "2bbea93e",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a51f58",
+   "id": "9b8dbdec",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86963d19",
+   "id": "bf226110",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f100d8",
+   "id": "eef12872",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7619b9b1",
+   "id": "91c3ce64",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122a03ac",
+   "id": "c2440de9",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fef9e3b",
+   "id": "61c5ca33",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b246e77c",
+   "id": "ee640caf",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66980873",
+   "id": "30799e46",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d70e81c",
+   "id": "96c7ce54",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfa885a",
+   "id": "1cfe8eee",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2358555d",
+   "id": "1a37b2f6",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deac5398",
+   "id": "a8f7700b",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3034cce4",
+   "id": "a1620dc6",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f89e2af",
+   "id": "18d1ed66",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35c2a3a7",
+   "id": "d5ebdde1",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4053df28",
+   "id": "17ef599d",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d0387f",
+   "id": "a6e74037",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "665e0b8a",
+   "id": "8af48362",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a819208",
+   "id": "59fda3e0",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64088837",
+   "id": "730cf760",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4b071a",
+   "id": "858cd7db",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347da112",
+   "id": "03b146b8",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1717132",
+   "id": "90586c8a",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a16f85",
+   "id": "ed39bcc8",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebaf01a4",
+   "id": "1c34f2e6",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "071bc5e1",
+   "id": "79658cdd",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0847ae03",
+   "id": "f187f773",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb28bc5",
+   "id": "66bcacea",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a454de",
+   "id": "9b3c2abe",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2309a049",
+   "id": "439ac248",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -882,7 +882,7 @@
   }
  ],
  "metadata": {
-  "date": 1741730300.485941,
+  "date": 1741992967.4066596,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
